--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "@appbaseio/reactivemaps": "^2.0.1",
     "@appbaseio/reactivesearch": "^2.10.3",
+    "bootstrap": "^4.3.1",
     "react": "^16.5.2",
+    "react-bootstrap": "^1.0.0-beta.8",
     "react-dom": "^16.5.2",
     "react-scripts": "1.1.5"
   },
